--- a/11-characteres-list/css/style.css
+++ b/11-characteres-list/css/style.css
@@ -48,17 +48,73 @@ section .box {
   -webkit-backdrop-filter: blur(25px);
           backdrop-filter: blur(25px);
 }
+section .box h3 {
+  color: white;
+  margin-bottom: 20px;
+}
 section .box-title {
   color: white;
-  justify-content: en;
+}
+section .box-list {
+  position: relative;
+  display: flex;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: 0.5s;
+  overflow: hidden;
+  z-index: 1000;
+}
+section .box-list:hover {
+  transform: scale(1.15) translateX(20px) translateY(-15px);
+  transition: 0.5s;
+  background: rgba(243, 243, 243, 0.856);
+  box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.5);
+}
+section .box-list:hover .content .rank {
+  right: 20px;
+}
+section .box-list:hover .content h4, section .box-list:hover .content p {
+  color: #333;
 }
 section .box-list-img {
+  position: relative;
   width: 60px;
   height: 60px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-right: 10px;
 }
 section .box-list-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+section .box-list .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+}
+section .box-list .content .rank {
+  position: absolute;
+  right: -50px;
+  color: #03a9f4;
+  transition: 0.5s;
+  font-size: 2em;
+}
+section .box-list .content .rank small {
+  font-weight: 500;
+  opacity: 0.25;
+}
+section .box-list .content h4 {
+  line-height: 1.2em;
+  font-weight: 600;
+  transition: 0.5s;
 }/*# sourceMappingURL=style.css.map */
