--- a/11-characteres-list/css/style.scss
+++ b/11-characteres-list/css/style.scss
@@ -37,35 +37,104 @@ section{
     }
 
     .box{
-        position: relative;
-        min-width: 350px;
-        min-height: 350px;
-        background: rgba(255,255,255, 0.1);
-        box-shadow: 3px 25px 45px rgba(0,0,0,0.1);
-        border: 1px solid rgba(255,255,255, 0.1);
-        border-right: 1px solid rgba(255,255,255, 0.2);
-        border-bottom: 1px solid rgba(255,255,255, 0.2);
-        border-radius: 10px;
-        z-index: 10; //forma de sobreponer a los otros elementos
-        padding: 20px;
-        backdrop-filter: blur(25px); //para que el fondo tenga un difuminado
-        
+        position       : relative;
+        min-width      : 350px;
+        min-height     : 350px;
+        background     : rgba(255,255,255, 0.1);
+        box-shadow     : 3px 25px 45px rgba(0,0,0,0.1);
+        border         : 1px solid rgba(255,255,255, 0.1);
+        border-right   : 1px solid rgba(255,255,255, 0.2);
+        border-bottom  : 1px solid rgba(255,255,255, 0.2);
+        border-radius  : 10px;
+        z-index        : 10;                                //forma de sobreponer a los otros elementos
+        padding        : 20px;
+        backdrop-filter: blur(25px);                        //para que el fondo tenga un difuminado
+
+        h3{
+            color        : white;
+            margin-bottom: 20px;
+        }
+
         &-title{
             color: white;
-            justify-content: ;
+              // justify-content: cen;
         }
+
         &-list{
-            
+
+            position     : relative;
+            display      : flex;
+            padding      : 10px;
+            background   : rgba(0,0,0,0.1);
+            border-radius: 10px;
+            margin       : 10px 0;           //esta es para darle espacio arriba y abajo, izquierda y derecha 0
+            cursor       : pointer;
+            transition   : 0.5s ;
+            overflow     : hidden;
+            z-index      : 1000;             //para sobreponer el elemento
+
+            &:hover{
+                  // transform: translateX(5px);
+                transform : scale(1.15) translateX(20px) translateY(-15px);
+                transition: 0.5s;
+                background: rgba(243, 243, 243, 0.856);
+                box-shadow: 3px 5px 10px rgb(0, 0, 0, 0.5);
+
+                .content{
+                    .rank{
+                        right: 20px;
+                    }
+
+                    h4, p{
+                        color: #333;
+                    }
+                }
+            }
+
             &-img {
-            
-                width : 60px;
-                height: 60px;
+                position     : relative;
+                width        : 60px;
+                height       : 60px;
+                border-radius: 10px;
+                overflow     : hidden;
+                margin-right : 10px;
+
                 img{
+                    position  : absolute;
+                    top       : 0;
+                    left      : 0;
                     width     : 100%;
                     height    : 100%;
-                    object-fit: cover;  //por si tiene distorciones la images
-
+                    object-fit: cover;     //por si tiene distorciones la images
                 }
+
+            }
+
+            .content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                color: #fff;
+                
+                .rank{
+                    position: absolute;
+                    right: -50px;
+                    color: #03a9f4;
+                    transition: 0.5s;
+                    font-size: 2em;
+
+                    small{
+                        font-weight: 500;
+                        opacity: 0.25;
+                    }
+                }
+
+                h4{
+                    line-height: 1.2em;
+                    font-weight: 600;
+                    transition: 0.5s;
+                }
+
             }
         }
     }
