--- a/12-hover/css/style.css
+++ b/12-hover/css/style.css
@@ -27,14 +27,81 @@ body section .container-card {
   width: 300px;
   height: 400px;
   background: rgba(255, 255, 255, 0.05);
+  margin: 20px;
+  box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 body section .container-card-img img {
-  width: 500px;
-  height: 400px;
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+body section .container-card-content {
+  position: absolute;
+  bottom: -162px;
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 10;
+  transition: bottom 0.5s;
+  transition-delay: 0.8s;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  box-shadow: 0, -10px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+body section .container-card-content-box h3 {
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: 18px;
+  margin: 20px 0 15px;
+  line-height: 1.1em;
+  transition: 0.5s;
+  transform: translateY(-20px);
+  opacity: 0;
+  transition-delay: 0.6s;
+}
+body section .container-card-content-box h3 span {
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: initial;
 }
 body section .container-card-content-box-sci {
-  list-style: none;
+  position: relative;
+  bottom: 10px;
+  display: flex;
 }
 body section .container-card-content-box-sci li {
   list-style: none;
+  margin: 0 10px;
+  transform: translateY(40px);
+  transition: 0.5s;
+  opacity: 0;
+  transition-delay: calc(0.2s * var(--i));
+}
+body section .container-card-content-box-sci li a {
+  color: #fff;
+  font-size: 24px;
+}
+body section .container-card:hover .container-card-content {
+  bottom: 0px;
+  transition-delay: 0s;
+}
+body section .container-card:hover .container-card-content .container-card-content-box h3 {
+  transform: translateY(0px);
+  opacity: 1;
+}
+body section .container-card:hover .container-card-content-box-sci li {
+  transform: translateY(0px);
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
