--- a/12-hover/css/style.scss
+++ b/12-hover/css/style.scss
@@ -34,32 +34,105 @@ body{
                 width: 300px;
                 height: 400px;
                 background: rgba(255, 255, 255, 0.05);
+                margin: 20px;
+                box-shadow: 2px 5px 15px rgba(0,0,0,0.2);
+                border-radius: 15px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
 
     
                 &-img{
                     img{
-                        width : 500px;
-                        height: 400px
+                        width : 100%;
+                        height: 100vh;
+                        object-fit: cover;
                     }
                 }
 
                 &-content{
-                    h3{
-
-                    }
+                    position: absolute;
+                    bottom: -162px;
+                    width: 100%;
+                    height: 160px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    z-index: 10;                   
+                    transition: bottom 0.5s;
+                    transition-delay: 0.8s;
+                    backdrop-filter: blur(15px);
+                    box-shadow: 0, -10px 10px rgba(0,0,0,0.1);
+                    border: 1px solid rgba(255, 255, 255, 0.2);
 
                     &-box{
 
+                        h3{
+                            color: white;
+                            text-transform: uppercase;
+                            letter-spacing: 2px;
+                            font-weight: 500;
+                            font-size: 18px;
+                            margin: 20px 0 15px;
+                            line-height: 1.1em;
+                            transition: 0.5s;
+                            transform: translateY(-20px);
+                            opacity: 0;
+                            transition-delay: 0.6s;
+
+                            span{
+                                font-size: 12px;
+                                font-weight: 300;
+                                text-transform: initial;
+                            }
+                        }
                         &-sci{
-                            list-style: none;
-                            
+
+                            position: relative;
+                            bottom: 10px;
+                            display: flex;
+                                                        
                             li{
                                 list-style: none;
+                                margin: 0 10px;
+                                transform: translateY(40px);
+                                transition: 0.5s;
+                                opacity: 0;
+                                transition-delay: calc(0.2s * var(--i));     
+                                
+                                a{
+                                    color: #fff;
+                                    font-size: 24px;
+
+                                }
                             }
                         }
                     }
                 }
+                
+                &:hover .container-card-content{
+                    bottom: 0px;
+                    transition-delay: 0s;
+                }               
+
+                &:hover .container-card-content .container-card-content-box h3{
+                    transform: translateY(0px);
+                    opacity: 1;
+                }
+                
+                &:hover{
+                   .container-card-content-box-sci{                                                     
+                        li{
+                            transform: translateY(0px);
+                            opacity: 1;
+                        }
+                    }
+    
+                }
             }
+
         }
     }
 }
