--- a/13-login-1/css/style.scss
+++ b/13-login-1/css/style.scss
@@ -47,10 +47,162 @@ section{
     }
 
     .box{
+        position: relative;
         .cuadrado{
             content: "";
             position: absolute;
+            border-radius: 10px;
+            background: rgba(228, 8, 209, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            border-right: 1px solid rgba(255, 255, 255, 0.2);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(5px); //apicamos el difuminado
+            animation: animate 10s linear infinite;
+            animation-delay: calc(-1s * var(--1));
+
+            &:nth-child(1){
+                top: -50px;
+                right: -60px;
+                width: 100px;
+                height: 100px;
+            }
+
+            &:nth-child(2){
+                top: 150px;
+                left: -100px;
+                width: 120px;
+                height: 120px;
+                z-index: 2;
+            }
+            &:nth-child(3){
+                bottom: 50px;
+                right: -60px;
+                width: 80px;
+                height: 80px;
+                z-index: 2;
+            }
+            &:nth-child(4){
+                bottom: -80px;
+                left: 100px;
+                width: 50px;
+                height: 50px;
+                z-index: 2;
+            }
+            &:nth-child(5){
+                top: -80px;
+                left: 140px;
+                width: 60px;
+                height: 60px;
+                z-index: 2;
+            }
         }
+
+        .container{
+            position: relative;
+            width: 400px;
+            min-height: 400px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 3px 15px 20px rgb(90, 68, 92);
+
+            .form{
+                position: relative;
+                width: 100%;
+                height: 100%;
+                padding: 40px;
+                box-sizing: border-box;
+
+                h2{
+                    position: relative;
+                    margin: 0;
+                    padding: 0;
+                    color: #fff;
+                    font-size: 24px;
+                    font-weight: 600;
+                    letter-spacing: 1px;
+                    margin-bottom: 40px;
+
+                    &:before{
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        bottom: -10px;
+                        width: 80px;
+                        height: 4px;
+                        background: #fff;
+                        border-radius: 5px;
+                    }
+                }
+
+                form{
+                    position: relative;
+
+                    .inputbox{
+                        width: 100%;
+                        margin-top: 20px;
+
+                        input{
+                            width: 100%;
+                            background: transparent;
+                            padding: 10px 20px;
+                            background: rgba(255, 255, 255, 0.2);
+                            border-top: 1px solid rgba(255, 255, 255, 0.5);
+                            border-left: 1px solid rgba(255, 255, 255, 0.5);
+                            border-radius: 35px;
+                            box-shadow: 0 5px 5px rgb(17, 17, 17, 0.5);
+                            outline: none; //reliramos las lineas de los inputs
+                            font-size: 16px ;
+                            letter-spacing: 1px;
+                            font-weight: 600;
+
+                            &::placeholder{
+                                color: white;
+                            }
+                        }
+
+                        input[type= "submit"]{
+                            background: #fff;
+                            color: gray;
+                            border: none;
+                            font-weight: 600;
+                            max-width: 100px;
+                            cursor: pointer;
+                            margin-bottom: 20px;
+                            // outline-color: none;
+                        }
+                    }
+
+                    .olvidar, .crear{
+                        margin-top: 5px;
+                        color: #fff;
+                        padding: 2px;
+
+                        a{
+                            color: white;
+                            font-weight: 600;
+
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+
+}
+
+//para logra que la animaciones que se le dieron, pueda reliazar los movimientos con el keyframes
+@keyframes animate {
+    0%, 100%{
+        transform: translateY(-40px);
+    }
+
+    50%{
+        transform: translateY(40px);
     }
 
 }
