--- a/14-ondas-inferiores/css/style.css
+++ b/14-ondas-inferiores/css/style.css
@@ -30,7 +30,39 @@ section .ondas span {
   width: 325vh;
   height: 325vh;
   top: 0;
-  left: 50px;
-  transform: translate(-50% -75%);
+  left: 50%;
+  transform: translate(-50%, -75%);
   background: #000;
+}
+section .ondas span:nth-child(1) {
+  border-radius: 45%;
+  background: rgb(20, 20, 20);
+  animation: animate 5s linear infinite;
+}
+section .ondas span:nth-child(2) {
+  border-radius: 40%;
+  background: rgba(20, 20, 20, 0.3);
+  animation: animate 10s linear infinite;
+}
+section .ondas span:nth-child(3) {
+  border-radius: 42.5%;
+  background: rgba(20, 20, 20, 0.5);
+  animation: animate 15s linear infinite;
+}
+section .content {
+  position: relative;
+  z-index: 1;
+  color: white;
+  letter-spacing: 2px;
+  font-size: 20em;
+  text-align: center;
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
 }/*# sourceMappingURL=style.css.map */
