--- a/14-ondas-inferiores/css/style.scss
+++ b/14-ondas-inferiores/css/style.scss
@@ -22,7 +22,7 @@ section{
         width: 100%;
         height: 100%;
         background: #4973ff;
-        box-shadow: 0 0 50px rgba(0,0,0, 0.5);
+        box-shadow: 0 0 50px rgba(0,0,0,.5);
         transition: 0.5s;
         span{
             content: "";
@@ -30,9 +30,45 @@ section{
             width: 325vh;
             height: 325vh;
             top: 0;
-            left: 50px;
-            transform: translate(-50% -75%);
+            left: 50%;
+            transform: translate(-50%, -75%);
             background: #000;
+
+            &:nth-child(1){
+                border-radius: 45%;
+                background: rgba(20,20,20, 1);
+                animation: animate 5s linear infinite; 
+            }
+            &:nth-child(2){
+                border-radius: 40%;
+                background: rgba(20,20,20,.3);
+                animation: animate 10s linear infinite; 
+            }
+            &:nth-child(3){
+                border-radius: 42.5%;
+                background: rgba(20,20,20, .5);
+                animation: animate 15s linear infinite; 
+            }
         }
     }
+
+    .content{
+        position: relative;
+        z-index: 1;
+        color: white;
+        letter-spacing: 2px;
+        font-size: 20em;
+        text-align: center;
+
+
+    }
+}
+
+@keyframes animate {
+    0%{
+        transform: translate(-50%, -75%) rotate(0deg);
+    }   
+    100%{
+        transform: translate(-50%, -75%) rotate(360deg);
+    }    
 }
