--- a/15-nikepage/css/style.css
+++ b/15-nikepage/css/style.css
@@ -57,6 +57,7 @@ section .content .text h2 {
   font-size: 2.5em;
   font-weight: 800;
   text-transform: uppercase;
+  text-decoration: none;
 }
 section .content .text p {
   color: #fff;
@@ -73,6 +74,35 @@ section .content .text a {
   box-shadow: 2px 3px 5px rgb(179, 110, 182);
   margin-top: 15px;
 }
+section:before {
+  content: "ZOOMX";
+  font-size: 20vw;
+  position: absolute;
+  color: rgba(0, 0, 0, 0.0666666667);
+  display: flex;
+  font-weight: 900;
+  padding-top: 13vh;
+  justify-content: center;
+  align-items: center;
+}
+section .sci {
+  margin-top: 10px;
+  position: absolute;
+  width: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+section .sci li {
+  list-style: none;
+}
+section .sci li a {
+  color: white;
+  font-size: 20px;
+}
+section .sci li a:hover {
+  transform: scale(1.5);
+  transition: 0.6s;
+}
 
 @media (max-width: 600px) {
   header {
@@ -83,4 +113,11 @@ section .content .text a {
     overflow: hidden;
   }
 }
-@keyframes animationShoe {}/*# sourceMappingURL=style.css.map */
+@keyframes animationShoe {
+  0%, 100% {
+    transform: translateY(20px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}/*# sourceMappingURL=style.css.map */
