finish page tourism

--- a/17-page-tourism/css/style.css
+++ b/17-page-tourism/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -51,15 +52,6 @@ main .banner::before {
   z-index: 1000;
   background: linear-gradient(to top, #111, transparent);
 }
-main .banner .fitBg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  opacity: 0.8;
-}
 main .banner .content {
   position: relative;
   z-index: 1000;
@@ -80,6 +72,7 @@ main .about {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px;
 }
 main .about .contentBx {
   min-width: 50%;
@@ -87,32 +80,9 @@ main .about .contentBx {
   text-align: end;
   padding-right: 40px;
 }
-main .about .contentBx .titleText {
-  font-weight: 600;
-  color: white;
-  text-transform: capitalize;
-  font-size: 2em;
-  margin-bottom: 10px;
-}
 main .about .contentBx p {
   color: white;
   font-size: 1em;
-}
-main .about .contentBx .imgBx {
-  position: relative;
-  min-width: 500%;
-  width: 50%;
-  min-height: 500px;
-}
-main .about .contentBx .imgBx img {
-  border-radius: 15px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 main .banner2 {
   position: relative;
@@ -121,6 +91,10 @@ main .banner2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 15px;
+}
+main .banner2 .fitBg {
+  border-radius: 20px;
 }
 main .banner2::before {
   content: "";
@@ -166,6 +140,32 @@ main .destination .destinationList .box {
   transition: 0.5s;
   margin: 10px;
   overflow: hidden;
+  border-radius: 15px;
+}
+main .destination .destinationList .box:hover {
+  opacity: 1;
+}
+main .destination .destinationList .box .imgBx {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+main .destination .destinationList .box .content {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .destination .destinationList .box .content h3 {
+  color: white;
+  z-index: 1;
+  line-height: 1.2em;
+}
+main .destination .destinationList .box .content h3 span {
+  font-size: 0.8em;
+  font-weight: 300;
+  opacity: 0.5;
 }
 main .banner3 {
   position: relative;
@@ -195,11 +195,43 @@ main .banner3::after {
   z-index: 1000;
   background: linear-gradient(to bottom, #111, transparent);
 }
+main .footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main .footer .sci {
+  position: relative;
+  display: flex;
+}
+main .footer .sci li {
+  list-style: none;
+}
+main .footer .sci li a {
+  margin: 0 20px;
+  text-decoration: none;
+}
+main .footer .sci li a img {
+  filter: invert(1);
+  max-width: 400px;
+}
+main .footer .copyright {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  color: #666;
+  text-align: center;
+}
+main .footer .copyright a {
+  text-decoration: none;
+  color: white;
+}
 
 a.btn {
   position: relative;
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 30px;
   background: #fff;
   color: #333;
   text-decoration: none;
@@ -210,4 +242,108 @@ a.btn {
 }
 a.btn:hover {
   box-shadow: 3px 5px 15px rgba(105, 130, 185, 0.4);
+}
+
+.titleText {
+  font-weight: 600;
+  color: #fff;
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+.text {
+  color: #fff;
+  font-size: 1em;
+}
+
+.imgBx {
+  position: relative;
+  min-width: 50%;
+  width: 50%;
+  min-height: 500px;
+}
+.imgBx img {
+  border-radius: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.fitBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.8;
+}
+
+@media (max-width: 600px) {
+  main section {
+    padding: 400px;
+  }
+  main .banner .content h2 {
+    font-size: 2.5em;
+  }
+  main .banner .content p {
+    font-size: 1em;
+  }
+  main .about {
+    flex-direction: column;
+  }
+  main .about .contentBx {
+    min-width: 100%;
+    width: 100%;
+    text-align: center;
+    padding-right: 0px;
+  }
+  main .about .contentBx .imgBx {
+    min-width: 100%;
+    width: 100%;
+    text-align: center;
+    padding-right: 0px;
+  }
+  .imgBx {
+    min-height: 250px;
+  }
+  .titleText {
+    font-size: 1.5em;
+  }
+  a.btn {
+    margin-bottom: 30px;
+  }
+  .destinationList .box {
+    position: relative;
+    max-width: 350px;
+    width: 100%;
+    height: 400px;
+    min-width: initial;
+  }
+  .destinationList .box .imgBx {
+    height: 320px;
+  }
+  .footer .sci li a img {
+    max-width: 30px;
+  }
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(10, 10, 10, 0.685);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(63, 74, 82);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(48, 112, 158);
 }/*# sourceMappingURL=style.css.map */
