--- a/18-hover-page/css/style.css
+++ b/18-hover-page/css/style.css
@@ -1,3 +1,30 @@
+@import "https://fonts.googleapis.com/css2?family=Ubuntu:wght@200;300;400;500;600;700;800;900&display=swap";
 * {
-  background: red;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #3f3752;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 30px 0;
+}
+.container .serviceBox {
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
