--- a/18-hover-page/css/style.css
+++ b/18-hover-page/css/style.css
@@ -20,11 +20,71 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
   margin: 30px 0;
 }
 .container .serviceBox {
   position: relative;
+  width: 350px;
+  height: 280px;
+  border-radius: 20px;
+  background: #51446e;
+  overflow: hidden;
+}
+.container .serviceBox .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--i);
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  transition-delay: 0.25s;
+}
+.container .serviceBox .icon ion-icon {
+  font-size: 5em;
+  color: white;
+  transition: 0.5s;
+  transition-delay: 0.25s;
+}
+.container .serviceBox:hover .icon {
+  top: 30px;
+  left: calc(50% - 40px);
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  transition-delay: 0s;
+}
+.container .serviceBox:hover .icon ion-icon {
+  font-size: 2em;
+  transition-delay: 0s;
+}
+.container .serviceBox:hover .content {
+  transform: scale(1);
+  transition-delay: 0.25s;
+}
+.container .serviceBox .content {
+  position: relative;
+  padding: 20px;
+  color: white;
+  text-align: center;
+  margin-top: 100px;
+  z-index: 1;
+  transform: scale(0);
+  transition: 0.5s;
+}
+.container .serviceBox .content h2 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+.container .serviceBox .content p {
+  font-weight: 300;
+  line-height: 1.5em;
+  overflow: auto;
 }/*# sourceMappingURL=style.css.map */
