--- a/19-card-deplazamiento/css/style.scss
+++ b/19-card-deplazamiento/css/style.scss
@@ -5,4 +5,52 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+} 
+body{
+
+    background: #ebf4ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    
+
+   
+}
+
+.container{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    .card{
+        position: relative;
+        // background: #cdd2db;
+        background: #a3a7afb0;
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+        width: 300px;
+        overflow: hidden;
+        
+        &-sub{
+
+            width: 90%;
+            height: 90%;
+            margin: 10px;
+            border-radius: 15px;
+            background: #ebf4ff;
+            box-shadow: 0px 10px 15px #ffffff80;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 }
