--- a/19-card-deplazamiento/css/style.scss
+++ b/19-card-deplazamiento/css/style.scss
@@ -1,56 +1,125 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";
 
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-} 
-body{
-
-    background: #ebf4ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    
-
-   
+    font-family: "Poppins", sans-serif;
 }
 
-.container{
-    position: absolute;
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    min-height: 100vh;
+    background: #ebf5fc;
 
-    .card{
-        position: relative;
-        // background: #cdd2db;
-        background: #a3a7afb0;
-        border-radius: 15px;
+    .container{
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 400px;
-        width: 300px;
-        overflow: hidden;
-        
-        &-sub{
+        max-width: 100%;
+        padding: 20px 0;
+        // background: red;
+        flex-wrap: wrap;
 
-            width: 90%;
-            height: 90%;
-            margin: 10px;
+        .card{
+            position: relative;
+            min-width: 320px;
+            height: 440px;
+            box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05), inset -5px -5px-5px rgba(255, 255, 255, 0.5), 5px 5px 5px rgba(0,0,0,0.05, ), -5px -5px-5px rgba(255, 255, 255, 0.5);
             border-radius: 15px;
-            background: #ebf4ff;
-            box-shadow: 0px 10px 15px #ffffff80;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            margin: 30px;
+
+            //cuando el padre es relativo, toma la posición automática del elemento superior, cuando es absolute es por que es un hijo y toca darle una posición al elemento top y lef para ubicar al elemento dentro del relativo
+            .box{
+                position: absolute;
+                top: 20px;
+                left: 20px;
+                right: 20px;
+                bottom: 20px;
+                background: #ebf5fc;
+                box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+                justify-content: center;
+                align-items: center;
+                display: flex;
+                border-radius: 15px;
+                
+                &:before{
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 50%;
+                    height: 100%;
+                    background: rgba(255, 255, 255, 0.02);
+                }
+
+                .content{
+                    padding: 20px;
+                    text-align: center;
+
+                    h2{
+                        position: absolute;
+                        top: -10px;
+                        right: 30px;
+                        font-size: 8em;
+                        color: rgba(0,0,0,0.2);
+                        transition: 0.5s;
+                    }
+
+                    h3{
+                        font-size: 1.8em;
+                        color: #777;
+                        z-index: 1;
+                        transition: 0.4s;
+                    }
+
+                    p{
+                        font-size: 1em;
+                        font-weight: 300;
+                        color: #777;
+                        z-index: 1;
+                        transition: 0.4s;
+                    }
+
+                    a{
+                        position: relative;
+                        display: inline-block;
+                        padding: 8px 20px;
+                        background: #03a9f4;
+                        margin-top: 15px;
+                        border-radius: 20px;
+                        text-decoration: none;
+                        font-weight: 400;
+                        color: #fff;
+                        letter-spacing: 0.6px;
+                        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+                    }
+                }
+                
+                &:hover{
+                    transform: translateY(-30px);
+                    transition: 0.5s;
+                    color: #fff;
+                    background: linear-gradient(to bottom, #5f3cd0, #b167e9);
+
+                   .content{
+                        h2{
+                            filter: blur(7px);
+                        }
+                        h3{
+                            color: #fff;
+                        }
+                        p{
+                            color: #fff;
+                        }
+                        a{
+                            background: #ff606e;
+                        }
+                   }
+                }
+            }
         }
     }
 }
