--- a/22-card-3d/css/style.css
+++ b/22-card-3d/css/style.css
@@ -18,7 +18,6 @@ body .container {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  transform-style: preserve-3d;
   width: 100%;
 }
 body .container .card {
@@ -26,7 +25,6 @@ body .container .card {
   width: 320px;
   height: 320px;
   margin: 20px;
-  transform-style: preserve-3d;
   border-radius: 15px;
   overflow: hidden;
 }
@@ -75,9 +73,24 @@ body .container .card .content {
 body .container .card .content .sub-content {
   color: #fff;
   transform-style: preserve-3d;
+  padding: 20px;
+  margin: 0 30px;
+  border-radius: 15px;
+  background: linear-gradient(45deg, #fe0061, #ffeb38);
+  transform: translateZ(100px);
 }
 body .container .card .content .sub-content h2 {
   text-align: center;
+  font-size: 20px;
+  color: #fff;
+  letter-spacing: 1px;
+  backface-visibility: hidden;
+  text-transform: uppercase;
+}
+body .container .card .content .sub-content p {
+  font-size: 1em;
+  color: #fff;
+  backface-visibility: hidden;
 }
 body .container .card:hover .box {
   transform: rotateY(180deg);
