--- a/22-card-3d/css/style.scss
+++ b/22-card-3d/css/style.scss
@@ -18,7 +18,7 @@ body{
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        transform-style: preserve-3d;
+        // transform-style: preserve-3d;
         width: 100%;
 
         .card{
@@ -26,7 +26,7 @@ body{
             width: 320px;
             height: 320px;
             margin: 20px;
-            transform-style: preserve-3d;
+            // transform-style: preserve-3d;
             border-radius: 15px;
             overflow: hidden;
 
@@ -77,12 +77,26 @@ body{
                 .sub-content{
                     color: #fff;
                     transform-style: preserve-3d;
+                    padding: 20px;
+                    margin: 0 30px;
+                    border-radius: 15px;
+                    background: linear-gradient(45deg, #fe0061, #ffeb38);
+                    transform: translateZ(100px);
+
                     h2{
                         text-align: center;
+                        font-size: 20px;
+                        color: #fff;
+                        letter-spacing: 1px;
+                        backface-visibility: hidden;
+                        text-transform: uppercase;
+
                     }
 
                     p{
-
+                        font-size: 1em;
+                        color: #fff;
+                        backface-visibility: hidden;
                     }
                 }
             }
