--- a/22-card-3d/css/style.scss
+++ b/22-card-3d/css/style.scss
@@ -90,6 +90,7 @@ body{
                         letter-spacing: 1px;
                         backface-visibility: hidden;
                         text-transform: uppercase;
+                        text-shadow: 0 5px 10px #333;
 
                     }
 
